tests/parser/tests/cases/should_fail/dangling_parenthesis/case.stderr
error: unexpectedly reached the end of input
 --> $DIR/case.hash:1:17
1 |   k := (a) + ((b)));
  |                   ^ here
  = help: consider adding a `;`
